Locale: Make "View Source" locale more indicative of what it does
https://bugs.activestate.com/show_bug.cgi?id=106047

(integrated from master branch change 2d5ba5c by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/locale/en-US/komodo.dtd
+++ b/src/chrome/komodo/locale/en-US/komodo.dtd
@@ -764,7 +764,7 @@
 <!ENTITY userInterfaceUseFixedProportionalFont.desc "User Interface: Use Fixed/Proportional Font">
 <!ENTITY userInterfaceViewHideIndentationGuides.desc "User Interface: View/Hide Indentation Guides">
 <!ENTITY userInterfaceViewHideLineNumbers.desc "User Interface: View/Hide Line Numbers">
-<!ENTITY userInterfaceViewSource.desc "User Interface: View Source">
+<!ENTITY userInterfaceViewSource.desc "Browser Preview: View Source">
 <!ENTITY userInterfaceWordWrapLongLines.desc "User Interface: Word-wrap long lines">
 <!ENTITY view.label "View">
 <!ENTITY viewAsLanguage.accesskey "L">
