UX: Move editor tab toggle to "Toolbars" menu entry
Allows easier access and is a little less out of place (all "View"
entries are file specific")

(integrated from master branch change 4bd1038 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/modules/openfiles/locale/en-US/openfiles.dtd
+++ b/src/modules/openfiles/locale/en-US/openfiles.dtd
@@ -1,5 +1,5 @@
 <!ENTITY openFiles.label "Open Files">
-<!ENTITY viewEditorTabs.label "View Editor Tabs">
+<!ENTITY viewEditorTabs.label "Show Editor Tabs">
 <!ENTITY viewEditorTabs.tooltip "Toggle Editor Tabs">
 <!ENTITY closeFile.tooltip "Close File">
 
