find: confirm replacement dialog: allow creating of file associations for unknown files
(integrated from master branch change bef4fdf by Todd Whiteman <toddw@activestate.com>)

--- a/src/chrome/komodo/locale/en-US/find.dtd
+++ b/src/chrome/komodo/locale/en-US/find.dtd
@@ -115,6 +115,8 @@
 <!ENTITY showMarkedChanges.accesskey "S">
 <!ENTITY context_menu_check.label "Check">
 <!ENTITY context_menu_uncheck.label "Uncheck">
+<!ENTITY context_menu_associate.accesskey "L">
+<!ENTITY context_menu_associate.label "Associate to Language">
 
 <!--find2.xul-->
 <!ENTITY findWhat.label "Find what:">
