--- a/src/modules/commando/locale/en-US/commando.dtd
+++ b/src/modules/commando/locale/en-US/commando.dtd
@@ -1,8 +1,12 @@
 <!ENTITY commando.label "Commando">
-<!ENTITY showCommando.desc "Go to Anything">
+<!ENTITY showCommando.desc "Commando: Go to Anything">
+<!ENTITY focusQuickCommando.desc "Commando: Focus on Go To Anything">
 <!ENTITY commandoPrefs.desc "Commando Preferences">
 <!ENTITY clearCache.desc "Commando: Clear Cache">
 <!ENTITY relativePathsFromCurrentFile.checkbox.label "Relative paths use the current file's directory">
 <!ENTITY relativePathsFromCurrentFile.checkbox.tooltiptext "If disabled, commando will use the current project or current places directory for the relative path lookups.">
+
+<!ENTITY gotoAnythingToolbar.label "Go To Anything">
+<!ENTITY showHideGotoAnythingToolbar.desc "Show/Hide Go To Anything Toolbar">
 
 <!ENTITY searchScopes.label "Search Scopes">
