fix: 106219 update get started page with k-9 content.
(integrated from master branch change 6b4056f by cgchoffman <cgchoffman@gmail.com>)

--- a/src/modules/getstarted/locale/en-US/getstarted.dtd
+++ b/src/modules/getstarted/locale/en-US/getstarted.dtd
@@ -40,7 +40,7 @@
 <!ENTITY readDoc.label "You can also read the Komodo Documentation online.">
 
 <!ENTITY whatsNew.label "What's New">
-<!ENTITY whatsNew.description "Komodo 8.5 delivers major productivity-enhancing features along with an intuitive UI.">
+<!ENTITY whatsNew.description "Komodo 9.0: Modern, easily customized UI, new productivity tools, support for GO-lang, and a lot more.">
 <!ENTITY readMore.label "Read More..">
 
 <!ENTITY needHelp.label "Need Help?">
