fix: Preferences: Color scheme prefs failed to load due to missing label https://bugs.activestate.com/show_bug.cgi?id=106296 rn=

--- a/src/chrome/komodo/locale/en-US/pref/pref.dtd
+++ b/src/chrome/komodo/locale/en-US/pref/pref.dtd
@@ -925,3 +925,35 @@ For example, when entering '(', automatically add a closing ')' after the cursor
 <!ENTITY indicAlpha.label "Alpha (0&#8211;256):">
 <!ENTITY indicColor.label "Color:">
 <!ENTITY indicDrawUnderneath.label "Draw indicator underneath the text">
+<!ENTITY label.10 "10">
+<!ENTITY label.11 "11">
+<!ENTITY label.12 "12">
+<!ENTITY label.13 "13">
+<!ENTITY label.14 "14">
+<!ENTITY label.15 "15">
+<!ENTITY label.16 "16">
+<!ENTITY label.18 "18">
+<!ENTITY label.20 "20">
+<!ENTITY label.24 "24">
+<!ENTITY label.26 "26">
+<!ENTITY label.28 "28">
+<!ENTITY label.32 "32">
+<!ENTITY label.36 "36">
+<!ENTITY label.40 "40">
+<!ENTITY label.48 "48">
+<!ENTITY label.56 "56">
+<!ENTITY label.64 "64">
+<!ENTITY label.72 "72">
+<!ENTITY label.73 "7.3">
+<!ENTITY label.74 "7.4">
+<!ENTITY label.75 "7.5">
+<!ENTITY label.76 "7.6">
+<!ENTITY label.8 "8">
+<!ENTITY label.80 "8.0">
+<!ENTITY label.81 "8.1">
+<!ENTITY label.82 "8.2">
+<!ENTITY label.83 "8.3">
+<!ENTITY label.84 "8.4">
+<!ENTITY label.85 "8.5">
+<!ENTITY label.86 "8.6">
+<!ENTITY label.9 "9">
