fix: Locale: Update phrasing to reflect issues now living on Github
https://github.com/Komodo/KomodoEdit/issues/23

(integrated from master branch change 98260c4 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/locale/en-US/komodo.dtd
+++ b/src/chrome/komodo/locale/en-US/komodo.dtd
@@ -341,7 +341,7 @@
 <!ENTITY helpAboutKomodo.desc "Help: About Komodo">
 <!ENTITY helpAlternateHelpOnSelection.desc "Help: Alternate Help on Selection">
 <!ENTITY helpHelp.desc "Help: Help...">
-<!ENTITY helpKomodoBugDatabase.desc "Help: Report a Bug">
+<!ENTITY komodoBugDatabase.tooltiptext "Report a bug on GitHub">
 <!ENTITY helpKomodoCommunity.desc "Help: Komodo Community">
 <!ENTITY helpKomodoDiscussMailingListArchives.desc "Help: Komodo Discuss Mailing List Archives">
 <!ENTITY helpLanguageSpecificHelpOnSelection.desc "Help: Language-Specific Help on Selection">
