Commando: Packages: Added commando integration, made a ton of tweaks to facilitate this
(integrated from master branch change 88c90dd by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/modules/scope_packages/locale/en-US/scope-packages.properties
+++ b/src/modules/scope_packages/locale/en-US/scope-packages.properties
@@ -1,13 +1,26 @@
 confirmIncompatible.prompt=This package is not compatible with your version of Komodo. Abort installation?
 continueAnyway.label=Continue Anyway
 abortInstallation.label=Abort Installation
-restartKomodoAfterInstall.prompt=Installation of this package requires Komodo to be restarted. Proceed?
+restartKomodoAfterInstall.prompt=Package installed. Komodo should be restarted to finalize installation. Do you want to restart now?
+restartKomodoAfterSkinInstall.prompt=Skin "%S" installed. Komodo should be restarted to finalize installation. Do you want to restart now? After restarting you can find your skin under Preferences > Appearance.
+skinInstalledOpenPrefs.prompt=Skin "%S" installed, would you like to open your appearance preferences now?
 restartNow.label=Restart Now
 restartLater.label=Restart Later
 restartKomodoAfterUninstall.prompt=Uninstallation of this package requires Komodo to be restarted. Proceed?
-applyScheme.prompt=Would you like to apply this scheme now?
+applyScheme.prompt=Would you like to apply this color scheme now?
 applySchemeNow.label=Yes
 applySchemeLater.label=No
-applyKeybinds.prompt=Would you like to apply these keybindings now? If so, Komodo must be restarted.
-applyKeybindsNow.label=Yes and Restart
-applyKeybindsLater.label=No
+applyKeybinds.prompt=Would you like to apply these keybindings now?
+
+keybindingsApplied=Keybindings "%S" succesfully applied.
+schemeApplied=Color Scheme "%S"% succesfully applied.
+
+installing=Installing "%S"
+installed=Package "%S" succesfully installed
+
+addons=Addons
+toolbox=Toolbox
+macros=Macros
+schemes=Color Schemes
+skins=Skins
+keybinds=Keybindings
