Commando: Package installer: Added "Languages" category
(integrated from master branch change 97bd5fa by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/modules/scope_packages/locale/en-US/scope-packages.properties
+++ b/src/modules/scope_packages/locale/en-US/scope-packages.properties
@@ -3,6 +3,7 @@ continueAnyway.label=Continue Anyway
 abortInstallation.label=Abort Installation
 restartKomodoAfterInstall.prompt=Package installed. Komodo should be restarted to finalize installation. Do you want to restart now?
 restartKomodoAfterSkinInstall.prompt=Skin "%S" installed. Komodo should be restarted to finalize installation. Do you want to restart now? After restarting you can find your skin under Preferences > Appearance.
+restartKomodoAfterLangInstall.prompt=Language "%S" installed. Komodo should be restarted to finalize installation. Do you want to restart now?
 skinInstalledOpenPrefs.prompt=Skin "%S" installed, would you like to open your appearance preferences now?
 restartNow.label=Restart Now
 restartLater.label=Restart Later
@@ -24,3 +25,4 @@ macros=Macros
 schemes=Color Schemes
 skins=Skins
 keybinds=Keybindings
+languages=Languages
