Package installer: Added install links in relevant places
(integrated from master branch change 7aa5b22 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/locale/en-US/komodo.dtd
+++ b/src/chrome/komodo/locale/en-US/komodo.dtd
@@ -873,3 +873,10 @@
 <!ENTITY importPackage.label "Import kpz Package">
 <!ENTITY importPackageFromWeb.label "Import kpz Package From Web">
 
+<!ENTITY getMacro.label "Get More Macros">
+<!ENTITY getToolbox.label "Get More Toolbox Items">
+<!ENTITY browsePackages.label "Browse Available Packages">
+<!ENTITY contributePackages.label "Contribute Packages">
+<!ENTITY shareTool.label "Share this Tool">
+
+
