UI: Added the "New Tab" command, this shows the quick start page whenever you open a new tab
rn=

(integrated from master branch change 9.2.1-341-ge732c3f by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/locale/en-US/bindings.dtd
+++ b/src/chrome/komodo/locale/en-US/bindings.dtd
@@ -70,3 +70,4 @@
 <!ENTITY showHideWhitespace.label "Show/Hide Whitespace">
 <!ENTITY stop.tooltiptext "Stop">
 <!ENTITY wordWrap.label "Word Wrap">
+<!ENTITY newTab.tooltiptext "New Tab">
