--- a/src/chrome/komodo/locale/en-US/project/macro.properties
+++ b/src/chrome/komodo/locale/en-US/project/macro.properties
@@ -1,7 +1,7 @@
 apply=Apply
 applyAccessKey=A
-Create New Macro=Create New Macro
-Macro Properties=Macro Properties
+Create New Userscript=Create New Userscript
+Userscript Properties=Userscript Properties
 Triggering of macros on events has been disabled=Triggering of macros on events has been disabled in Edit/Preferences/Workspace...
 Do you wish to save your changes=Do you wish to save your changes?
 Macro was modified=Macro was modified
@@ -9,7 +9,7 @@ namedProperties='%S' Properties
 unnamedProperties=Unnamed '%S' Properties
 The custom icon specified for this X is missing=The custom icon specified for this %S is missing. Please choose another.
 running=running
-The current macro=The current macro
+The current userscript=The current userscript
 compiling=compiling
 running=running
 Macro X Error=Macro %S Error
