--- a/src/chrome/komodo/locale/en-US/pref/pref.dtd
+++ b/src/chrome/komodo/locale/en-US/pref/pref.dtd
@@ -674,6 +674,7 @@ For example, when entering '(', automatically add a closing ')' after the cursor
 <!ENTITY highlightMatchingTag.label "Highlight matching tag on mouse click">
 <!ENTITY highlightMatchingTagRemoveAfter.label "Remove tag highlighting after">
 <!ENTITY highlightMatchingTagConstrain.label "Constrain tag matching to the visible region">
+<!ENTITY editMatchingTags.label "Edit matching tags on select">
 
 <!--pref-indentation.xul-->
 <!ENTITY autoIndentStyle.label "Auto-indent style:">
