Find/Replace: Significantly improved the find/replace UX
(integrated from master branch change 9.2.1-400-g9b8397f by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/locale/en-US/find.dtd
+++ b/src/chrome/komodo/locale/en-US/find.dtd
@@ -78,6 +78,7 @@
 <!ENTITY mNMToNCopiesOfThePrecedingBlockNonGreedy.label "{m,n}? : 'm' to 'n' copies of the preceding block (non-greedy)">
 <!ENTITY markAll.label "Mark All">
 <!ENTITY multiline.label "Multiline">
+<!ENTITY multiline.tooltiptext "Use Multiple Lines">
 <!ENTITY nonGroupingGroup.label "(?:...) : non-grouping group">
 <!ENTITY numberTheContentsOfTheGroupOfTheGivenNumber.label "\number : the contents of the group of the given number">
 <!ENTITY oneOrMoreOfThePrecedingBlock.label "+ : one or more of the preceding block">
