Open Files: Tabs can now be sorted according to the open files sort settings
rn=

(integrated from master branch change 9.2.1-534-g9fb7170 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/modules/openfiles/locale/en-US/openfiles.dtd
+++ b/src/modules/openfiles/locale/en-US/openfiles.dtd
@@ -7,6 +7,7 @@
 <!ENTITY userInterfaceFocusOpenFilesTab.desc "User Interface: Focus on Open Files Pane">
 
 <!ENTITY groupFiles.label "Group Open Files">
+<!ENTITY sortTabs.label "Sort Tabs">
 <!ENTITY groupFiles.desc "OpenFiles Widget: Arrange Open Files in Groups">
 <!ENTITY groupByLang.label "Group By Language">
 <!ENTITY groupByLang.desc "OpenFiles Widget: Group Open Files by Language">
