History: Workspace history no longer persists across sessions
Can be turned back on under Preferences > Workspace

(integrated from master branch change 9.2.1-535-g9c9c5da by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/locale/en-US/pref/pref.dtd
+++ b/src/chrome/komodo/locale/en-US/pref/pref.dtd
@@ -212,6 +212,7 @@
 <!ENTITY doNotAlertMeOnLargeFileLoad.label "Do not alert me when a large buffer will be treated as plain text">
 <!ENTITY doNotRestoreLastWorkspace.label "Do not restore last workspace">
 <!ENTITY doNotWarnWhenFilesCannotBeReOpenedOnStartup.label "Do not warn when files cannot be re-opened on startup">
+<!ENTITY workspaceRestoreHistory.label "Restore Tab History">
 <!ENTITY documentMarkupSettings.label "Document Markup Settings">
 <!ENTITY donTAutoIndent.label "Don't auto-indent">
 <!ENTITY donTShowFoldMarks.label "Don't show fold marks">
