--- a/src/chrome/komodo/locale/en-US/pref/pref.dtd
+++ b/src/chrome/komodo/locale/en-US/pref/pref.dtd
@@ -238,7 +238,7 @@ For example, when entering '(', automatically add a closing ')' after the cursor
 <!ENTITY enableSmartSoftCharactersInsideLine.label "Enable soft characters inside lines">
 <!ENTITY enableSmartTabSkipsSoftCharacters.label "Pressing tab moves to right of soft characters">
 <!ENTITY cutCopyWithoutSelection.label "Cut/Copy with no selection will cut/copy the current line">
-<!ENTITY enableTriggeringOfMacrosOnKomodoEvents.label "Enable triggering of macros on Komodo events">
+<!ENTITY enableTriggeringOfMacrosOnKomodoEvents.label "Enable triggering of userscripts on Komodo events">
 <!ENTITY enableViEmulation.label "Enable Vi emulation">
 <!ENTITY endOfLine.label "End of line">
 <!ENTITY ensureFileEndsWithEOLMarker.label "Ensure file ends with EOL marker">
@@ -446,7 +446,7 @@ For example, when entering '(', automatically add a closing ')' after the cursor
 <!ENTITY tPerlTestScript.label ".t: Perl Test Script">
 <!ENTITY templates.label "Templates">
 <!ENTITY theServerNameToConnectToEitherADomainNameOrAIPAddress.tooltiptext "The server name to connect to, either a domain name or a IP address.">
-<!ENTITY triggeringMacros.label "Triggering Macros">
+<!ENTITY triggeringMacros.label "Triggering Userscripts">
 <!ENTITY type.label "Type">
 <!ENTITY update.label "Update">
 <!ENTITY updateFileStatusAutomatically.label "Update file status automatically">
