UX: Streamline the Javascript/NodeJS file association preference - fixes #664
(integrated from master branch change 9.2.1-548-g63f553b by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/locale/en-US/pref/pref.dtd
+++ b/src/chrome/komodo/locale/en-US/pref/pref.dtd
@@ -452,6 +452,7 @@ For example, when entering '(', automatically add a closing ')' after the cursor
 <!ENTITY updateFileStatusAutomatically.label "Update file status automatically">
 <!ENTITY useEmacsStyleLocalModeVariableModeLocalVariables.label "Use Emacs-style local 'mode' variable (-*- mode: ... -*-, Local Variables: ...)">
 <!ENTITY preferJavaScriptOverNode.label "Prefer JavaScript over Node.js">
+<!ENTITY autoDetectJSvsNode.label "Auto Detect Javascript/Node.js">
 <!ENTITY useFileContentToDetermineLanguage.label "Use File Content to Determine Language">
 <!ENTITY useHorizontalLineOnFolds.label "Use horizontal line on folds">
 <!ENTITY useShebangLine.label "Use shebang line (#!...)">
